3 added sticky nav and footer

--- a/app/views/simple_pages/about.html.erb
+++ b/app/views/simple_pages/about.html.erb
@@ -1,12 +1,47 @@
-<h1>About Me</h1>
-<p>
-  My name is Ruth and I am a student Web Developer based in Waringstown, a small village half an hour from Belfast.
-   A few months ago I took several free courses on HTML and CSS which enabled me to build a website for my cake
-   business.
-   That project got me hooked on web development and so I enrolled with Career Foundry with the aim of becoming
-   a full time web developer.
- </p>
-<p>
-  I am currently a self-employed musician, teacher and cake maker. I am 33 years young and live with my partner
-  Ryan and our fluffy feline ball of hatred - Pockets the Ragdoll cat. I'm looking for a complete career change 
-  in order to keep myself challenged and inspired.</p>
+<div class="container-fluid">
+  <h2>About Me</h2>
+  <p>
+    My name is Ruth and I am a student Web Developer based in Waringstown, a small village half an hour from Belfast.
+     A few months ago I took several free courses on HTML and CSS which enabled me to build a website for my cake
+     business.
+     That project got me hooked on web development and so I enrolled with Career Foundry with the aim of becoming
+     a full time web developer.
+   </p>
+  <p>
+    I am currently a self-employed musician, teacher and cake maker. I am 33 years young and live with my partner
+    Ryan and our fluffy feline ball of hatred - Pockets the Ragdoll cat. I'm looking for a complete career change
+    in order to keep myself challenged and inspired.</p>
+    <p>
+      My name is Ruth and I am a student Web Developer based in Waringstown, a small village half an hour from Belfast.
+       A few months ago I took several free courses on HTML and CSS which enabled me to build a website for my cake
+       business.
+       That project got me hooked on web development and so I enrolled with Career Foundry with the aim of becoming
+       a full time web developer.
+     </p>
+    <p>
+      I am currently a self-employed musician, teacher and cake maker. I am 33 years young and live with my partner
+      Ryan and our fluffy feline ball of hatred - Pockets the Ragdoll cat. I'm looking for a complete career change
+      in order to keep myself challenged and inspired.</p>
+      <p>
+        My name is Ruth and I am a student Web Developer based in Waringstown, a small village half an hour from Belfast.
+         A few months ago I took several free courses on HTML and CSS which enabled me to build a website for my cake
+         business.
+         That project got me hooked on web development and so I enrolled with Career Foundry with the aim of becoming
+         a full time web developer.
+       </p>
+      <p>
+        I am currently a self-employed musician, teacher and cake maker. I am 33 years young and live with my partner
+        Ryan and our fluffy feline ball of hatred - Pockets the Ragdoll cat. I'm looking for a complete career change
+        in order to keep myself challenged and inspired.</p>
+        <p>
+          My name is Ruth and I am a student Web Developer based in Waringstown, a small village half an hour from Belfast.
+           A few months ago I took several free courses on HTML and CSS which enabled me to build a website for my cake
+           business.
+           That project got me hooked on web development and so I enrolled with Career Foundry with the aim of becoming
+           a full time web developer.
+         </p>
+        <p>
+          I am currently a self-employed musician, teacher and cake maker. I am 33 years young and live with my partner
+          Ryan and our fluffy feline ball of hatred - Pockets the Ragdoll cat. I'm looking for a complete career change
+          in order to keep myself challenged and inspired.</p>
+</div>
