--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -1,3 +1,94 @@
 // Place all the styles related to the simple_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+// REUSABLE COMPONENTS
+$font-main: 'Playfair Display', serif;
+$blue-grey: #0E1F2D;
+$blue-grey-shadow: rgba(5, 17, 28, 0.2);
+$pink: #935B6A;
+$light-pink: #D9B4BE;
+$white: #fff;
+
+body {
+  font-family: $font-main;
+  font-size: 14px;
+  color: $blue-grey;
+}
+
+h2 {
+  font-size: 240%;
+  text-align: center;
+  &:after {
+    display: block;
+  	height: 3px;
+  	background-color: $pink;;
+  	content: " ";
+  	width: 100px;
+  	margin: 15px auto;
+  }
+}
+
+// HEADER SECTION
+
+header {
+  padding: 40px 0;
+  h1 {
+    color: $pink;;
+    font-size: 360%;
+    text-align: center;
+    margin: 0;
+    text-shadow: 0px 4px 3px $blue-grey-shadow,
+                 0px 8px 13px $blue-grey-shadow,
+                 0px 18px 23px $blue-grey-shadow;
+  }
+}
+
+// NAV
+
+nav {
+  width: 100%;
+  padding: 10px;
+  background: $pink;
+  overflow: hidden;
+
+  ul {
+    margin: 0 auto;
+    padding-left: 0;
+    list-style: none;
+    text-align: center;
+    overflow: hidden;
+
+    li {
+      display: inline-block;
+      padding: 5px 0;
+
+      a {
+        padding: 5px 20px;
+        color: $white;
+        font-size: 18px;
+        text-decoration: none;
+        text-transform: uppercase;
+
+        &:hover {
+          border-radius: 200px;
+          transition: background 0.5s;
+          background: $light-pink;
+        }
+      }
+    }
+  }
+}
+
+// footer
+
+footer {
+  width: 100%;
+  font-size: 80%;
+  text-align: center;
+  padding: 10px;
+  background: $pink;
+  overflow: hidden;
+  color: $white;
+}
