--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ruthblog</title>
-    <%= csrf_meta_tags %>
+    <title>Ruth's Blog</title>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <%= stylesheet_link_tag    'application', 'https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <%= csrf_meta_tags %>
   <body>
+    <header>
+      <h1>Ruth's Blog</h1>
+    </header>
     <nav>
       <ul>
         <li><%= link_to "Home", root_path %></li>
@@ -20,7 +24,7 @@
     <%= yield %>
 
     <footer>
-      &copy; 2018 Bike Berlin
+      &copy; 2018 Ruth Johnston
     </footer>
   </body>
 </html>
