--- a/app/views/simple_pages/contact.html.erb
+++ b/app/views/simple_pages/contact.html.erb
@@ -1,2 +1,6 @@
-<h1>Contact Me</h1>
-<p>I am contactable at ruthjohnstoncodes@gmail.com</p>
+<div class="container-fluid">
+
+    <h2>Contact Me</h2>
+    <p>I am contactable at ruthjohnstoncodes@gmail.com</p>
+
+</div>
