--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -9,6 +9,6 @@
 </div>
 <br>
 
-<div class="container-fluid">
+<!-- <div class="container-fluid">
   <%= link_to 'New Blog', new_blog_path %>
-</div>
+</div> -->
