--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,29 +1,12 @@
-<p id="notice"><%= notice %></p>
+<div class="container-fluid">
+  <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Category:</strong>
-  <%= @blog.category %>
-</p>
+  <%= image_tag(@blog.img_url, class: "img-lg") %>
 
-<p>
-  <strong>Title:</strong>
-  <%= @blog.title %>
-</p>
+  <h2><%= @blog.title %></h2>
 
-<p>
-  <strong>Description:</strong>
-  <%= @blog.description %>
-</p>
+  <p><%= @blog.content %></p>
 
-<p>
-  <strong>Img url:</strong>
-  <%= @blog.img_url %>
-</p>
-
-<p>
-  <strong>Content:</strong>
-  <%= @blog.content %>
-</p>
-
-<%= link_to 'Edit', edit_blog_path(@blog) %> |
-<%= link_to 'Back', blogs_path %>
+  <!-- <%= link_to 'Edit', edit_blog_path(@blog) %> | -->
+  <%= link_to 'Back', blogs_path %>
+</div>
