--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -38,6 +38,11 @@ $white: #fff;
   }
   .img-responsive {
     margin: 10px auto;
+    overflow: hidden;
+    transition: transform 0.5s, opacity 0.5s;
+    &:hover {
+      transform: scale(1.15);
+    }
   }
 }
 
@@ -46,8 +51,21 @@ $white: #fff;
 .img-lg {
   display: flex;
   margin: 30px auto;
+  transform: scale(1.15);
 }
 
 p {
   text-align: center;
+}
+
+#blog_table_inner a {
+  &:hover,:active {
+    border-radius: 5px;
+    transition: background 0.5s;
+    background-color: $light-pink;
+    text-decoration: none;
+  }
+  &:visited {
+    color: $blue-grey;
+  }
 }
